--- a/my-portfolio/vercel.json
+++ b/my-portfolio/vercel.json
@@ -4,11 +4,13 @@
   "builds": [
     {
       "src": "vite.config.js",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
