--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@vitejs/plugin-react": "^4.7.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +23,3 @@
     "vite": "^5.0.0"
   }
 }
-
-
-
