--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,14 @@
 
 {
-  "version": 2,
   "builds": [
     {
       "src": "vite.config.js",
-      "use": "@vercel/static-build"
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
